src/components/App.css
/* ... */
/* Create creature form */

.create-creature-form {
  width: 80%;
  margin-top: 20px;
  justify-content: center;
  grid-gap: 22px;
  display: grid;
  grid-template-columns: repeat(auto-fit, 15px);
}

.create-creature-form--multiplier-wrapper {
  display: flex;
  width: 100%;
  grid-column: span 4;
  align-items: center;
}

.create-creature-form--multiplier-symbol {
  margin-right: 5px;
  margin-top: 18px;
  font-weight: 700;
}

.create-creature-form--multiplier-wrapper input {
  font-weight: 700;
}

.create-creature-form--item__submit {
  display: flex;
  flex-direction: column;
  grid-column: span 2;
  justify-content: flex-end;
} 

.create-creature-form--item__tall {
  margin-top: -18px;
}

.create-creature-form--submit {
  height: 44px;
  padding: 4px;
  grid-column: span 2;
}

@media only screen and (max-width: 1175px) {
  .create-creature-form {
    width: 100%;
  }
}

/*
 * Ensure create creature form is centered on multiple rows on small screens
 */
@media only screen and (max-width: 825px) {
  .create-creature-form {
    grid-template-columns: repeat(6, 25px);
    grid-row-gap: 15px;
    grid-column-gap: 60px;
  }

  .create-creature-form--item__text {
    grid-column: 2 / span 4;
  }

  .create-creature-form--item__number {
    grid-column: 2 / span 4;
  }

  .create-creature-form--multiplier-wrapper {
    grid-column: 2 / span 2;
    margin-left: 40px;
  }

  .create-creature-form--item__multiplier {
    grid-column: 2 / span 2;
  }

  .create-creature-form--item__submit {
    margin-left: 10px;
  }

  .create-creature-form--item__multiplier .form--label {
    text-align: center;
  }

  .create-creature-form--item__text .form--label {
    text-align: center;
  }

  .create-creature-form--item__number .form--label {
    text-align: center;
  }
  
  .create-creature-form--item__tall {
    margin-top: 0;
  }

  .create-creature-form--submit {
    grid-column: 4 / span 2;
    width: 60px;
  }
}

/* Creatures */

.creature-list {
  width: 80%;
  margin-bottom: 40px;
}

.creature-wrapper {
  border-top: 10px double #822000;
  border-bottom: 10px double #822000;
  border-left: 1px solid #822000;
  border-right: 1px solid #822000;
  box-shadow: 0 0 5px #979AA4;
  border-radius: 15px;
  margin: 60px 0 10px 0;
  padding: 10px;
  background-color: #EBE1AD;
}

.creature-wrapper__active {
  border: 4px solid #822000;
}

.creature-title {
  display: flex;
  align-items: center;
  margin-bottom: 5px;
}

/* Ensure the creature boxes take up 100% of the screen width for smaller screens. */
@media only screen and (max-width: 768px) {
  .creature-list {
    width: 100%;
  }

  .creature-wrapper {
    border-left: none;
    border-right: none;
    border-radius: 0;
  }

  .creature-wrapper__active {
    border-left: none;
    border-right: none;
  }
}

.creature-wrapper__dead {
  background-color: lightgrey;
}

.creature-header {
  margin-top: 0;
  margin-bottom: 0;
  padding-top: 8px;
}

.creature-expander-button {
  border: none;
  box-shadow: none;
  padding: 0px;
  display: flex;
}

.creature-expander-button__disabled {
  cursor: auto;
}

.creature-expander-icon {
  margin-left: 10px;
}

.creature-name {
  font-weight: bold;
  font-size: 28px;
  color: #822000;
  text-align: left;
  text-transform: capitalize;
  background: transparent;
  height: 35px;
}

@media only screen and (max-width: 768px) {
  .expanded-creature--name {
    white-space: unset;
    overflow: unset
  };
}

.expanded-creature--status {
  margin-top: 4px;
  margin-bottom: 35px;
}

.expanded-creature--stat {
  margin-bottom: 10px;
  color: #822000;
}

.expanded-creature--remove-button {
  max-width: 20%;
  padding: 4px;
  height: 43px;
}

.expanded-creature--confirm-remove-button {
  max-width: 20%;
  padding: 4px;
  height: 43px;
  min-width: 10%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.expanded-creature--separator {
  background-image: linear-gradient(to left, rgba(255,0,0,0), #822000);
  height: 4px;
  margin-bottom: 20px;
  margin-top: 20px;
  width: 85%;
}

@media only screen and (max-width: 768px) {
  .expanded-creature--separator {
    width: 100%;
  }
}

.expanded-creature--columns__wide {
  column-count: 2;
}

.expanded-creature--columns__normal {
  column-count: 1;
}

.expanded-creature--columns {
  margin-bottom: 15px;
}

@media only screen and (max-width: 768px) {
  .expanded-creature--columns__wide {
    column-count: 1;
  }
}

.expanded-creature--columns > * {
  -webkit-column-break-inside: avoid;
  page-break-inside: avoid;
  break-inside: avoid;
}

/* Allow more room for buttons in creature box on smaller screen sizes. */
@media only screen and (max-width: 600px) {
  .expanded-creature--confirm-remove-button {
    max-width: 40%;
  }
}

.collapsed-creature {
  width: 100%;
}

.collapsed-creature--status {
  display: flex;
  margin: 4px 0 4px 0;
  color: black;
  font-style: italic;
}

.collapsed-creature--status__margin {
  margin-left: 5px;
}

.collapsed-creature--name__dead {
  text-decoration: line-through wavy;
  text-decoration-color: black;
}

.collapsed-creature--notes {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  padding-right: 2px;
  max-width: 45%;
}

/* Creature note list */

.creature-note-list {
  width: 75%;
}

.creature-note-list--item {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  margin-bottom: 10px;
}

.creature-note-list--label {
  font-size: 22px;
  color: #822000;
  border-bottom: 1px solid #822000;
  width: 85%;
  margin-bottom: 10px;
}

@media only screen and (max-width: 768px) {
  .creature-note-list--label {
    width: 100%;
  }
}

.creature-note-list--note {
  margin-top: 10px;
  color: black;
  font-style: italic;
}

.creature-note-list--note::first-letter {
  text-transform: uppercase;
}

.creature-note-list--button {
  margin-right: 15%;
  margin-left: 5px;
  padding: 4px;
  display: flex;
}
/* ... */

